<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_second">Second_Activity</string>
    <string name="dialog_title">Kobayashi</string>
    <string name="dialog_message">Find a chair</string>
    <string name="dialog_ok_button">Ok</string>
    <string name="dialog_cancel_button">Cancel</string>
    <string name="dialog_show_name">CreateDialog</string>
    <string name="change_button">Add Button</string>
    <string name="content_fragment_name">Fragment_Name</string>
    <string name="article_fragment_textview_text">FirstFragment</string>
    <string name="article_fragment_edittext_hint">Input Something</string>
    <string name="article_fragment_button_text">Change another</string>
    <string name="content_fragment_textview_text">Second Fragment</string>
    <string name="content_fragment_edittext_hint">Input Something</string>
    <string name="content_fragment_button_text">Change another</string>
</resources>
